- base color updated

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@
   --hiredots-text-dark-rgb: 126, 140, 158;
   --hiredots-text-gray: #89868d;
   --hiredots-text-gray-rgb: 137, 134, 141;
-  --hiredots-base: #2bb673;
+  --hiredots-base: #f7941d;
   --hiredots-base-rgb: 0, 205, 229;
   --hiredots-primary: #0b2f81;
   --hiredots-primary-rgb: 11, 47, 129;
