primary color updated

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@
   --hiredots-text-gray-rgb: 137, 134, 141;
   --hiredots-base: #f7941d;
   --hiredots-base-rgb: 0, 205, 229;
-  --hiredots-primary: #0b2f81;
+  --hiredots-primary: #2bb673;
   --hiredots-primary-rgb: 11, 47, 129;
   --hiredots-gray: #f0f3f9;
   --hiredots-gray-rgb: 240, 243, 249;
