- profile image size css hotfix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12268,3 +12268,7 @@ body.megamenu-popup-active .mobile-nav__content {
 .jobs-list__content{
   padding-top:15px;
 }
+
+.profile-img{
+  height:183px;
+}
